attempt with poster and odmb api

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-25f7257a-0c5c-427b-8480-eaa994666b99;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
